# AgentAid

./: .gitignore  CLAUDE.md  DETAILS.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
apps/arxiv-digest-web/: index.html  tsconfig.json
apps/arxiv-digest-web/src/: App.tsx  styles.css
apps/arxiv-digest-web/src/api/: client.test.ts  client.ts  types.ts
apps/arxiv-digest-web/src/components/: ScoreChip.tsx
apps/arxiv-digest-web/src/routes/: DigestList.tsx  DigestView.tsx
apps/bare-sdk-example/: README.md  pyproject.toml
apps/bare-sdk-example/src/bare_sdk_example/: example.py
apps/bare-sdk-example/tests/: test_example.py
apps/reference-agent/: pyproject.toml
apps/reference-agent/src/arxiv_agent/: llm.py  tools.py  worker.py
apps/reference-agent/src/arxiv_agent/mock_arxiv/: client.py  real.py
apps/reference-agent/src/arxiv_agent/prompts/: planner.md
apps/reference-agent/tests/: test_attribution.py  test_mock_arxiv.py  test_planner.py  test_real_arxiv.py
docs/: RECORDING_SCRIPT.md
docs/architecture/: multi-tenant.md
docs/diagrams/: agent-orchestration.puml  agent-sdk-layer.puml  architecture.puml  class.puml  dependencies.puml  frontend-layer.puml  sequence.puml  server-layer.puml
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-05-06-agentaid-implementation.md
docs/superpowers/specs/: 2026-05-06-agentaid-design.md
eval/golden/: dataset.json
scripts/: add_captions.py  capture_digest_screens.py  load_golden.py  make_gif.sh  record_walkthrough.py  run_demo.py  seed_drift.py
