[project]
name = "bare-sdk-example"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "agentaid",
    "anthropic>=0.40",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[tool.uv.sources]
agentaid = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bare_sdk_example"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit external services (excluded by default in CI)",
]
